@@ -3,6 +3,10 @@ Changelog
 
 6.3.dev0 - (unreleased)
 -----------------------
+* Change: Added some unit tests for rdf marshaller
+  [zoltan_andras refs #86696]
+* Bug fix: Treated get_size error when the blob is represented as a string
+  [zoltan_andras refs #86449]
 
 6.2 - (2017-06-26)
 ------------------
